==> JayKun/Advanced-Projects/Lab2/RF24.cpp <==
#include "nRF24L01.h"
#include "RF24_config.h"
#include "RF24.h"

void RF24::csn(bool mode)
{
	digitalWrite(csn_pin, mode);
	delayMicroseconds(5);
}

void RF24::ce(bool level)
{
	//Allow for 3-pin use on ATTiny
	if (ce_pin != csn_pin) digitalWrite(ce_pin, level);
}

uint8_t RF24::write_payload(const void* buf, uint8_t data_len, const uint8_t writeType)
{
	uint8_t status;
	const uint8_t* current = reinterpret_cast<const uint8_t*>(buf);
	data_len = rf24_min(data_len, payload_size);
	uint8_t blank_len = dynamic_payloads_enabled ? 0 : payload_size - data_len;
	IF_SERIAL_DEBUG(printf("[Writing %u bytes %u blanks]\n", data_len, blank_len); );
	beginTransaction();
	status = _SPI.transfer(writeType);
	while (data_len--) {
		_SPI.transfer(*current++);
	}
	while (blank_len--) {
		_SPI.transfer(0);
	}
	endTransaction();
	return status;
}

uint8_t RF24::read_payload(void* buf, uint8_t data_len)
{
	uint8_t status;
	uint8_t* current = reinterpret_cast<uint8_t*>(buf);

	if (data_len > payload_size) data_len = payload_size;
	uint8_t blank_len = dynamic_payloads_enabled ? 0 : payload_size - data_len;
	IF_SERIAL_DEBUG(printf("[Reading %u bytes %u blanks]\n", data_len, blank_len); );
	beginTransaction();
	status = _SPI.transfer(R_RX_PAYLOAD);
	while (data_len--) {
		*current++ = _SPI.transfer(0xFF);
	}
	while (blank_len--) {
		_SPI.transfer(0xff);
	}
	endTransaction();
	return status;
}

void RF24::printDetails(void)
{
	print_status(get_status());

	print_address_register(PSTR("RX_ADDR_P0-1"), RX_ADDR_P0, 2);
	print_byte_register(PSTR("RX_ADDR_P2-5"), RX_ADDR_P2, 4);
	print_address_register(PSTR("TX_ADDR\t"), TX_ADDR);

	print_byte_register(PSTR("RX_PW_P0-6"), RX_PW_P0, 6);
	print_byte_register(PSTR("EN_AA\t"), EN_AA);
	print_byte_register(PSTR("EN_RXADDR"), EN_RXADDR);
	print_byte_register(PSTR("RF_CH\t"), RF_CH);
	print_byte_register(PSTR("RF_SETUP"), RF_SETUP);
	print_byte_register(PSTR("CONFIG\t"), CONFIG);
	print_byte_register(PSTR("DYNPD/FEATURE"), DYNPD, 2);

	printf_P(PSTR("Data Rate\t = "PRIPSTR"\r\n"), pgm_read_word(&rf24_datarate_e_str_P[getDataRate()]));
	printf_P(PSTR("Model\t\t = "PRIPSTR"\r\n"), pgm_read_word(&rf24_model_e_str_P[isPVariant()]));
	printf_P(PSTR("CRC Length\t = "PRIPSTR"\r\n"), pgm_read_word(&rf24_crclength_e_str_P[getCRCLength()]));
	printf_P(PSTR("PA Power\t = "PRIPSTR"\r\n"), pgm_read_word(&rf24_pa_dbm_e_str_P[getPALevel()]));

}

bool RF24::begin(void)
{
	uint8_t setup = 0;
	// Initialize pins
	if (ce_pin != csn_pin) pinMode(ce_pin, OUTPUT);
	pinMode(csn_pin, OUTPUT);
	_SPI.begin();
	ce(LOW);
	csn(HIGH);
	// Must allow the radio time to settle else configuration bits will not necessarily stick.
	// This is actually only required following power up but some settling time also appears to
	// be required after resets too. For full coverage, we'll always assume the worst.
	// Enabling 16b CRC is by far the most obvious case if the wrong timing is used - or skipped.
	// Technically we require 4.5ms + 14us as a worst case. We'll just call it 5ms for good measure.
	// WARNING: Delay is based on P-variant whereby non-P *may* require different timing.
	delay(5);
	// Reset CONFIG and enable 16-bit CRC.
	write_register(CONFIG, 0b00001100);
	// Set 1500uS (minimum for 32B payload in ESB@250KBPS) timeouts, to make testing a little easier
	// WARNING: If this is ever lowered, either 250KBS mode with AA is broken or maximum packet
	// sizes must never be used. See documentation for a more complete explanation.
	setRetries(5, 15);
	// check for connected module and if this is a p nRF24l01 variant
	if (setDataRate(RF24_250KBPS))
	{
		p_variant = true;
	}

	// Then set the data rate to the slowest (and most reliable) speed supported by all
	// hardware.
	setDataRate(RF24_1MBPS);
	// Disable dynamic payloads, to match dynamic_payloads_enabled setting - Reset value is 0
	toggle_features();
	write_register(FEATURE, 0);
	write_register(DYNPD, 0);
	// Reset current status
	// Notice reset and flush is the last thing we do
	write_register(NRF_STATUS, _BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT));

	// Set up default configuration.  Callers can always change it later.
	// This channel should be universally safe and not bleed over into adjacent
	// spectrum.
	setChannel(76);

	// Flush buffers
	flush_rx();
	flush_tx();

	powerUp(); //Power up by default when begin() is called

			   // Enable PTX, do not write CE high so radio will remain in standby I mode ( 130us max to transition to RX or TX instead of 1500us from powerUp )
			   // PTX should use only 22uA of power
	write_register(CONFIG, (read_register(CONFIG)) & ~_BV(PRIM_RX));

	// if setup is 0 or ff then there was no response from module
	return (setup != 0 && setup != 0xff);
}

void RF24::startWrite(const void* buf, uint8_t len, const bool multicast) {
	write_payload(buf, len, multicast ? W_TX_PAYLOAD_NO_ACK : W_TX_PAYLOAD);
	ce(HIGH);
#if defined(CORE_TEENSY) || !defined(ARDUINO) || defined (RF24_BBB) || defined (RF24_DUE)
	delayMicroseconds(10);
#endif
	ce(LOW);
}
